--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,16 +41,18 @@
   --ui-error: #ef4444;
 }
 
-*,
-*:hover {
+*{
   @apply cursor-none;
 }
 .cursor {
-  @apply w-5 h-5 rounded-full bg-DacBrown;
+  @apply w-2 h-2 rounded-full bg-DacBrown;
   position: fixed;
-  top: 50.8%;
-  left: 49.6%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
   pointer-events: none;
   z-index: 9999;
+}
+
+.cursor-circle{
+  @apply w-6 h-6 rounded-full border-2 border-DacBrown fixed z-50 -top-2 -left-2 pointer-events-none
 }
