--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,9 +45,8 @@
   @apply cursor-none;
 }
 .cursor {
-  @apply w-2 h-2 rounded-full bg-DacBrown top-0 left-0 fixed pointer-events-none z-50;
+  @apply w-2 h-2 rounded-full bg-DacBrown top-0 left-0 fixed pointer-events-none z-50 transform -translate-x-1/2 -translate-y-1/2;
 }
-
-.cursor-circle{
-  @apply w-6 h-6 rounded-full border-2 border-DacBrown fixed z-50 -top-2 -left-2 pointer-events-none;
+.cursor-circle {
+  @apply w-6 h-6 rounded-full border-1 fixed pointer-events-none top-0 left-0 border-DacBrown z-40 transform -translate-x-1/2 -translate-y-1/2;
 }
