--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,8 @@
   --color-DacWhite-900: #f0f1f5;
 
   --color-DacPurple: rgb(166 129 255 / 1);
+
+  --nav-duration: 700ms;
 }
 
 :root {
@@ -55,7 +57,8 @@
 
 @media (prefers-color-scheme: dark) {
   .cursor {
-    background-color: var(--color-DacWhite);
+    background:transparent;
+    backdrop-filter: invert(1);
   }
   .cursor-circle {
     border-color: var(--color-DacWhite);
@@ -65,6 +68,37 @@
 /* Cursor End */
 
 body{
-  background:radial-gradient(125% 125% at 50% 90%, #f1f1f1 40%, #f8c366 100%); 
-  background-size: 100% 100%
+  @apply m-auto
+}
+
+body>div{
+  @apply w-[calc(100dvw-1.5rem)] m-auto rounded-4xl overflow-hidden;
+}
+
+.corner {
+	@apply absolute aspect-square h-1/2 bg-[radial-gradient(circle_at_0%_100%,_transparent_2em,_white_2em)];
+}
+
+.corner.left{
+  @apply -left-[1.88em];
+}
+
+.corner.top-left{
+  @apply top-0 -left-0 rotate-270;
+}
+
+.corner.right{
+  @apply -right-0 top-full;
+}
+
+.corner.bottom{
+  @apply -bottom-8 left-0;
+}
+
+.slideNavLeft{
+  @apply -translate-x-[100vw] duration-[var(--nav-duration)];
+}
+
+.slideTransformSize{
+  @apply absolute -top-4 left-0 w-[60dvw] h-[100dvh] bg-DacWhite z-50 flex flex-col items-center justify-center gap-4 rounded-[0_1em_1em_0];
 }
