--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -29,11 +29,14 @@
   --color-DacBlack-600: #667085;
 
   /* --color-DacWhite: #f7f7f7; */
-  --color-DacWhite: #ffffff;
+  --color-DacWhite: #faf1de;
+  --color-realWhite: #ffffff;
   --color-DacWhite-600: #bfc6d4;
   --color-DacWhite-700: #d1d6e0;
   --color-DacWhite-800: #e0e4eb;
   --color-DacWhite-900: #f0f1f5;
+
+  --color-primary: #ffba6b;
 
   --darkTransparent: rgba(0 0 0 / 0.4);
 
@@ -92,8 +95,66 @@ body>div{
   @apply sm:w-[calc(100%-1.5rem)] m-auto rounded-4xl overflow-hidden;
 }
 
-header{
-  /* filter: drop-shadow(0px 0px 2px #ccc); */
+.stats li{
+  @apply w-1/3 md:w-auto
+}
+
+@media (max-width: 1200px) and (max-height: 500px){
+  .hero{
+    @apply h-dvh rounded-3xl
+  }
+
+  .hero-content{
+    @apply col-start-1 col-span-12 row-span-5 row-start-3 grid-rows-4 grid-cols-12
+  }
+
+  .hero-title{
+    @apply row-start-1 col-span-12 col-start-1
+  }
+
+  .hero-content .hero-description{
+    @apply col-span-6 row-start-2
+  }
+
+  .hero-cta{
+    @apply col-span-6 row-start-5
+  }
+
+  .stats{
+    @apply col-span-5 col-start-8 row-start-4 row-span-4 m-0
+  }
+
+  .addon{
+    display:none;
+  }
+  .stats li{
+  @apply w-[10em]
+}
+}
+
+@media (max-width: 700px) and (max-height: 500px){
+
+  .hero{
+    @apply h-[120vh]
+  }
+  .hero-cta{
+    /* @apply row-start-4 */ 
+    @apply mb-4
+  }
+  
+  .stats{
+    @apply col-span-3 col-start-4 row-start-4 row-span-4 m-0
+  }
+}
+
+@media (orientation: portrait) and (max-width: 640px) {
+  .hero-content{
+    @apply row-start-2 pb-4
+  }
+
+  .stats{
+    @apply -top-8 -mb-8 -mt-10
+  }
 }
 
 header .corners, header .corner{
@@ -110,7 +171,7 @@ header .corners, header .corner{
 
 .corner {
 	@apply absolute aspect-square h-1/2;
-  --corner-color: white;
+  --corner-color: var(--color-DacWhite);
   background-image: radial-gradient(circle at 0% 100%, transparent 2em, var(--corner-color) 2em);
 }
 
