--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -96,12 +96,12 @@ body>div{
 }
 
 .stats li{
-  @apply w-1/3 md:w-auto
+  @apply md:w-auto flex-[1_1_40%] md:flex-auto
 }
 
 @media (max-width: 1200px) and (max-height: 500px){
   .hero{
-    @apply h-dvh rounded-3xl
+    @apply rounded-3xl h-[120vh]
   }
 
   .hero-content{
@@ -121,24 +121,19 @@ body>div{
   }
 
   .stats{
-    @apply col-span-5 col-start-8 row-start-4 row-span-4 m-0
+    @apply col-span-5 col-start-8 row-start-4 row-span-3 m-0
   }
 
   .addon{
     display:none;
   }
   .stats li{
-  @apply w-[10em]
+  @apply w-[6rem] h-6
 }
 }
 
 @media (max-width: 700px) and (max-height: 500px){
-
-  .hero{
-    @apply h-[120vh]
-  }
   .hero-cta{
-    /* @apply row-start-4 */ 
     @apply mb-4
   }
   
@@ -146,6 +141,10 @@ body>div{
     @apply col-span-3 col-start-4 row-start-4 row-span-4 m-0
   }
 }
+
+/* .hero{
+  @apply h-[120vh]
+} */
 
 @media (orientation: portrait) and (max-width: 640px) {
   .hero-content{
