--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -79,7 +79,7 @@ a{
 }
 
 a:hover{
-  @apply scale-105 bg-DacPurple text-DacWhite
+  @apply scale-105 bg-DacPurple text-DacWhite rounded-full
 }
 
 .cursor {
