added some images and added them to the about section

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -18,6 +18,7 @@
   --color-DacYellow-500: #e9b44c;
   --color-DacYellow-600: #cc9933;
   --color-DacYellow-700: #996600;
+  --color-DacYellow-sectionBG: #fae3c1;
 
   --color-DacBrown: #422f32;
   --color-DacBrown-Lighter: #6c4551;
